@@ -1,4 +1,5 @@
 9 Jun 2018
+update: details.php youtube to match others
 fix: imdb lookup
 fix: site forcing new users to https
 fix: query using incorrect id
